--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 :root {
@@ -102,6 +103,7 @@ p {
 }
 
 .expand {
+    display: block;
     text-decoration: none;
     color: var(--secondary-text-color);
     font-weight: bold;
@@ -111,6 +113,19 @@ p {
     position: absolute;
     top: 37.25rem;
     left: 19.95rem;
+}
+
+.shorten{
+    display: none;
+    text-decoration: none;
+    color: var(--secondary-text-color);
+    font-weight: bold;
+    font-size: 16px;
+    padding: 0.5rem;
+    text-shadow: 1px 0px var(--text-shadow);
+    position: absolute;
+    top: 53.25rem;
+    left: 19.7rem;
 }
 
 .projectsintro {
@@ -136,6 +151,7 @@ p {
 .project {
     margin-left: 1.5rem;
     margin-top: 2rem;
+    margin-bottom: 5rem;
 }
 
 .project h2{
@@ -150,9 +166,10 @@ p {
     
 }
 .project img{
-    width: 366px;
+    width: 362px;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
+    border: 2px solid var(--primary-text-color);
 }
 
 .project a{
@@ -162,6 +179,16 @@ p {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     text-decoration: none;
     color: var(--secondary-text-color);
+}
+
+.tostart {
+    display: block;
+    text-decoration: none;
+    color: var(--primary-text-color);
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 4rem;
 }
