--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ p {
 .xenosintro {
     margin-left: 1.5rem;
     margin-top: 2rem;
+    margin-right: 1.5rem;
 }
 
 .xenosintro h2 {
@@ -219,7 +220,24 @@ p {
     width: 28x;
     height: 28px;
     padding: 5px;
-position: absolute;
-top: 1rem;
-left: 1rem;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+}
+
+.xenosintro img{
+    width: 100%;
+}
+
+.xenosintro img:nth-child(3){
+    margin-top: 1rem;
+}
+
+.xenosintro p {
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+}
+
+.pfinal {
+    margin-bottom: 4rem !important;
 }
