--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ p b {
 
 .project {
     margin-left: 1.5rem;
+    margin-right: 1.5rem;
     margin-top: 2rem;
     margin-bottom: 5rem;
 }
@@ -278,6 +279,14 @@ p b {
   }
 #pwhodeskid {
     display: none;
+}
+.video {
+    margin: 1.5rem;
+}
+.videoframe{
+    width: 360px;
+    height: 200px;
+    border: 2px solid var(--primary-text-color);
 }
 
   @media only screen and (min-width: 1800px) {
